--- a/characters .css
+++ b/characters .css
@@ -1,8 +1,9 @@
+@import url(https://db.onlinewebfonts.com/c/39a2c7f346d5cfae7045aeb2fb50d9ad?family=Lulo+Clean+W01+One+Bold);
 body{
   background-color:#C42627;
-  font-family: 'Bebas Nue', sans-serif;
   line-height: 1;
   text-emphasis-color: #fff;
+  font-family: "Lulo Clean W01 One Bold";
   
   
 }
@@ -17,7 +18,6 @@ html{
   box-sizing: border-box;
 }
 
-
 .logo{
   text-align: center;
   background-color: black;
@@ -31,13 +31,31 @@ html{
   height: 110px;
   display: flex;
   align-items: center;
+  animation: bounceIn 1.5s ease;
+}
+
+@keyframes bounceIn {
+  0% {
+    opacity: 0;
+    transform: translateY(0px) scale(0.9);
+  }
+  60% {
+    opacity: 1;
+    transform: translateY(2px) scale(1.05);
+  }
+  100% {
+    transform: translateY(0) scale();
+  }
 }
 
 .top-logo{
   max-width: 100%;
   max-height: 100%;
   object-fit: contain;
+ 
 }
+
+
 
 .top-nav{
   background-color: black;
@@ -68,7 +86,7 @@ html{
   transition: color 0.3s;
   padding: 20px 25px;
   color: azure;
-  font-family: 'Bebas Nue', sans-serif;
+  
 }
 
 .item a:hover{
@@ -80,15 +98,17 @@ html{
     display: flex;
     list-style: none;
     padding: 0;
+    animation: slideUp 1.5s ease
 }
+
 
 body {
   background-color: #c62828;
   color: white;
-  font-family: 'Segoe UI', sans-serif;
   margin: 0;
   padding: 0;
   text-align: center;
+  
 }
 
 .header {
@@ -102,10 +122,12 @@ input{
     padding: 5px;
     border-radius: 12px;
     border: #C42627;
+    font-family: "Lulo Clean W01 One Bold";
 }
 
 button{
     border-top-color: rgb(255, 255, 255);
     border-radius: 10px;
-    width: 80px;
+    width: 85px;
+    font-family: "Lulo Clean W01 One Bold";
 }
