--- a/index.css
+++ b/index.css
@@ -1,3 +1,5 @@
+@import url(https://db.onlinewebfonts.com/c/39a2c7f346d5cfae7045aeb2fb50d9ad?family=Lulo+Clean+W01+One+Bold);
+
 body{background-color: #0399F8;
       margin: 0;
   padding: 0;
